# macos-backup-tauri

./: .gitignore  README.md  embed-dmg.sh  index.html  package-lock.json  package.json
public/: help.html
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
