[package]
name = "macos-backup-suite"
version = "1.0.0"
description = "macOS Backup Suite - Inventar, Backup und Restore für macOS"
authors = ["Nojan"]
edition = "2021"

[lib]
name = "macos_backup_suite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
walkdir = "2"
dirs = "5"
tauri-plugin-store = "2.4.1"

libc = "0.2"
